--- a/index.html
+++ b/index.html
@@ -4,7 +4,81 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Codespace Proxy — Private Server</title>
-  <link rel="stylesheet" href="/style.css" />
+  <style>
+    :root{
+      --bg:#0f1115;
+      --panel:#121417;
+      --accent:#8ab4f8;
+      --muted:#9aa4b2;
+      --spotify:#1db954;
+      --glass: rgba(255,255,255,0.04);
+      --card:#15161a;
+    }
+
+    *{box-sizing:border-box;font-family:Inter, "Segoe UI", Roboto, Arial, sans-serif}
+
+    body{
+      margin:0;
+      background:linear-gradient(180deg,#0b0c10 0%, #0f1115 100%);
+      color:#e6eef8;
+      min-height:100vh;
+    }
+
+    /* Chrome-like topbar */
+    .topbar{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:10px 14px;
+      background:linear-gradient(180deg, rgba(255,255,255,0.02), transparent);
+      border-bottom:1px solid rgba(255,255,255,0.02);
+      backdrop-filter: blur(4px);
+    }
+    .chrome-left{display:flex;align-items:center;gap:12px}
+    .circles{display:flex;gap:6px}
+    .c{width:12px;height:12px;border-radius:50%;display:inline-block}
+    .red{background:#ff5f57}
+    .yellow{background:#ffbd2e}
+    .green{background:#28c840}
+    .address{opacity:0.9;font-weight:600}
+    .chrome-right{display:flex;align-items:center;gap:10px}
+    .status-dot{color:var(--spotify);font-weight:700}
+
+    /* Layout */
+    .main{display:flex;gap:20px;padding:24px}
+    .left-panel{
+      width:220px;background:linear-gradient(180deg,var(--panel),#0f1215);border-radius:10px;padding:18px;
+      display:flex;flex-direction:column;align-items:stretch;gap:18px;
+      box-shadow: 0 4px 24px rgba(2,6,23,0.6);
+    }
+    .logo{background:linear-gradient(120deg,var(--accent),#6ee7b7);padding:14px;border-radius:8px;font-weight:700;text-align:center}
+    .nav{background:transparent;border:0;color:var(--muted);padding:10px 12px;text-align:left;border-radius:8px;cursor:pointer}
+    .nav.active{background:var(--glass);color:var(--accent)}
+    .footer{margin-top:auto;font-size:12px;color:var(--muted)}
+
+    /* Content */
+    .content{flex:1;min-height:360px}
+    .card{background:linear-gradient(180deg,var(--card), #0e1114);padding:18px;border-radius:12px;box-shadow:0 6px 30px rgba(0,0,0,0.6)}
+    label{display:block;margin-top:12px;color:var(--muted);font-size:13px}
+    input{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.03);background:transparent;color:inherit;margin-top:6px}
+    .row{display:flex;gap:10px;margin-top:12px}
+    button{padding:10px 14px;border-radius:10px;border:0;cursor:pointer}
+    .primary{background:var(--accent);color:#02122b;font-weight:700}
+    .secondary{background:transparent;border:1px solid rgba(255,255,255,0.04);color:var(--muted)}
+    .muted{color:var(--muted)}
+    .result{margin-top:14px;padding:10px;border-radius:8px;background:rgba(0,0,0,0.25);font-size:13px;color:var(--muted)}
+    .howto{margin-top:12px;font-size:13px;color:var(--muted)}
+    code{background:rgba(255,255,255,0.03);padding:3px 6px;border-radius:6px}
+
+    /* Responsive tweaks */
+    @media (max-width: 880px) {
+      .main { flex-direction: column; padding: 12px; }
+      .left-panel { width: 100%; flex-direction: row; align-items:center; gap:12px; padding:12px; border-radius:10px; }
+      .left-panel nav { display:flex; gap:8px; }
+      .left-panel .logo { padding:8px; min-width:48px; text-align:center; }
+      .content { width:100% }
+    }
+  </style>
 </head>
 <body>
   <div class="topbar">
@@ -56,6 +130,77 @@
     </section>
   </div>
 
-  <script src="/app.js"></script>
+  <script>
+    (function(){
+      const tokenInput = document.getElementById('token');
+      const targetInput = document.getElementById('target');
+      const setBtn = document.getElementById('set-target');
+      const statusBtn = document.getElementById('status');
+      const result = document.getElementById('result');
+      const statusDot = document.getElementById('status-dot');
+
+      function show(msg, ok = true){
+        result.style.color = ok ? '#bfe8ff' : '#ffb3b3';
+        result.textContent = msg;
+      }
+
+      async function checkStatus(){
+        const token = tokenInput.value.trim();
+        if(!token){ show('Set ADMIN_TOKEN in the field to check status.', false); return; }
+        try{
+          const r = await fetch('/api/status', { headers: { 'x-admin-token': token } });
+          if(r.status === 200){
+            const j = await r.json();
+            if(j.configured || j.target){
+              show('Configured target: ' + j.target);
+              statusDot.textContent = '●';
+              statusDot.style.color = '#1db954';
+            } else {
+              show('No target configured yet.');
+              statusDot.textContent = '○';
+              statusDot.style.color = '#ffb86b';
+            }
+          } else {
+            let j;
+            try { j = await r.json(); } catch(e) { j = {}; }
+            show('Status error: ' + (j && j.error ? j.error : r.status), false);
+          }
+        }catch(e){
+          show('Network error: ' + e.message, false);
+        }
+      }
+
+      async function setTarget(){
+        const token = tokenInput.value.trim();
+        const target = targetInput.value.trim();
+        if(!token || !target){ show('Provide token and target URL', false); return; }
+        try{
+          const r = await fetch('/api/config', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json', 'x-admin-token': token },
+            body: JSON.stringify({ target })
+          });
+          let j;
+          try { j = await r.json(); } catch(e) { j = {}; }
+          if(r.ok){
+            show('Proxy configured. Use /p/ as base path. Target: ' + j.target);
+            statusDot.textContent = '●';
+            statusDot.style.color = '#1db954';
+          } else {
+            show('Error: ' + (j && j.error ? j.error : r.status), false);
+          }
+        }catch(e){
+          show('Network error: ' + e.message, false);
+        }
+      }
+
+      setBtn.addEventListener('click', setTarget);
+      statusBtn.addEventListener('click', checkStatus);
+
+      // initial status try
+      statusDot.textContent = '○';
+      statusDot.style.color = '#ffb86b';
+    })();
+  </script>
 </body>
 </html>
